# medharness

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE-CC-BY-SA-4.0  README.md  SECURITY.md  VERSION  dryrun_e2e_v2.sh  pyproject.toml  requirements-dev.txt  requirements.txt  研发交付SOP-v2.2-micro.md  研发交付SOP-v2.md
.claude/: launch.json  settings.json
.github/: dependabot.yml  pull_request_template.md
.memory/: MEMORY.md  项目档案.md
HANDOFF/: 01-system-prompt.md  06-self-check-protocol.md  07-escalation.md
deploy/: .env.production.example  docker-compose.prod.yml
docs/: community-vs-commercial.md  compliance-checklist.md  roadmap.md  troubleshooting.md
mcp/: README.md
prototype/: console-demo.html
scripts/: backup.sh  check-cert-expiry.sh  docker-build.sh  gen-tls.sh  restore.sh  setup-worm.sh  teardown.sh  upgrade.sh  verify-hashchain.sh  verify_hashchain_logic.py
tests/: test_audit_log_dockerfile.py  test_audit_log_fallback.py  test_audit_log_schema.py  test_audit_log_server_v2.py  test_audit_log_writer.py  test_desensitize_crypto_envelope.py  test_desensitize_dockerfile.py  test_desensitize_file_key_provider.py  test_desensitize_phi_lookup_schema.py  test_desensitize_server_v2_crypto.py  test_desensitize_t2_integration.py  test_docker_build_script.py  test_docker_compose_prod.py  test_drill_injection.py  test_hashchain.py  test_model_router_allowlist.py  test_model_router_dockerfile.py  test_model_router_heterogeneity.py  test_model_router_integration.py  test_model_router_limits.py  test_model_router_policy.py  test_model_router_server_v2.py  test_outbound_safety_classifier.py  test_phi_detector_dockerfile.py  test_phi_detector_postprocess.py  test_phi_detector_server_v3.py  test_phi_fingerprint_check.py  test_prompt_injection_corpus.py  test_prompt_injection_detector.py  test_setup_worm.py  test_stub_mcp_dockerfiles.py  test_t12_scripts.py  test_tls_scripts.py  test_verify_hashchain.py
tools/: customize.py  (+1 more)
web/: index.html  (+4 more)
(+270 files in other folders)
